# Membrane_MCP

./: README.md
Membrane-main/: .gitignore  AI_HANDOFF_FULL_CODE.md  Dockerfile  MEMBRANE_CODEBASE.md  fix_components.sh  fix_components2.sh  fix_components3.sh  fix_components4.sh  generate_codebase_md.sh  index.html  package-lock.json  package.json  railway.json
Membrane-main/backend/: MEMBRANE_CODEBASE.md  fix_story_service.py  generate_codebase_md.sh  main.py  mcp.py  models.py  requirements.txt  update_api_base.js
Membrane-main/backend/services/: auth_service.py  database_service.py  file_service.py  mcp_service.py  openrouter_service.py  story_service.py  vector_service.py
Membrane-main/backups/readable/: characters-readable-20260317-130025.json  stories-readable-20260317-130025.json
Membrane-main/mcp_server/: README.md  __init__.py  host_context.py  package.json  protocol.py  pyproject.toml  requirements.txt  run.py  server.py
Membrane-main/mcp_server/resources/: __init__.py
Membrane-main/mcp_server/tools/: __init__.py
Membrane-main/src/: App.tsx  index.css
Membrane-main/src/context/: AuthContext.tsx
Membrane-main/src/features/auth/: LoginPage.tsx
Membrane-main/src/features/dashboard/: Dashboard.tsx
Membrane-main/src/features/editor/: EditorWorkspace.tsx
Membrane-main/src/features/landing/: LandingPage.tsx
Membrane-main/src/features/stories/: CharacterGenerator.tsx  StoryDashboard.css  StoryDashboard.tsx  StoryEditor.css  StoryEditor.tsx  WorldbuildingGenerator.tsx
Membrane-main/src/services/: api.ts
