[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "membrane-mcp-server"
version = "0.1.0"
description = "MCP server for the Membrane story engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "aiofiles>=24.0.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
